# azure-container-apps-jobs

./: Dockerfile  Makefile  README.md  container_app_start_job.py  models.py  requirements-dev.txt  requirements.txt  service_bus_process.py  service_bus_write.py  start_job.py  storage_queue_process.py  storage_queue_write.py  utils.py  workbook.template.json  workbook_render.py
scripts/: workbook_render.py
src/service_bus_queue/: .dockerignore  Dockerfile  Makefile  pyproject.toml
src/service_bus_queue/src/service_bus_queue/: service_bus_process.py  service_bus_write.py
src/shared/: .flake8  Makefile  pyproject.toml  requirements.txt
src/shared/src/shared/: models.py  utils.py
src/storage_queue/: Dockerfile  Makefile  pyproject.toml  requirements.txt
src/storage_queue/src/storage_queue/: storage_queue_process.py  storage_queue_write.py
