[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "service_bus_queue"
version = "1.0.0"
description = "Code to process messages in an Azure Service Bus Queue."
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.isort]
profile = "black"
