[project]
name = "service_bus_queue"
version = "1.0.0"
description = "Code to process messages in an Azure Service Bus Queue."
requires-python = ">=3.10"
dependencies = [
    "azure-servicebus>=7.14.2",
    "shared",
]

[tool.uv.workspace]
members = [
    "../../packages/*"
]

[tool.uv.sources]
shared = { workspace = true }

[dependency-groups]
dev = [
    "azure-mgmt-appcontainers>=3.2.0",
    "jinja2>=3.1.6",
    "ruff>=0.11.6",
    "typer>=0.15.2",
]
