[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "1.0.0"
description = "Shared code."
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.ruff.lint]
select = [
  "D",   # pydocstyle
]
ignore = ["D100", "D104"]  # ignore docstrings in modules & packages

[tool.ruff.lint.pydocstyle]
convention = "google"
